<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.signup.SignupActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/background"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:alpha="0">

        <TextView
            android:id="@+id/txt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="16dp"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textSize="23sp"
            android:alpha="0"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/ed_register_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/background_edittext"
            android:ems="10"
            android:hint="@string/name_description"
            android:inputType="text"
            android:paddingStart="16dp"
            android:textColor="@color/white"
            android:textSize="18sp"
           />

        <TextView
            android:id="@+id/txt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="16dp"
            android:text="@string/email"
            android:textColor="@color/white"
            android:textSize="23sp"
            android:alpha="0"/>

        <com.example.storyapp.MyEditTextEmail
            android:id="@+id/ed_register_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/background_edittext"
            android:ems="10"
            android:hint="@string/email_description"
            android:inputType="text"
            android:paddingStart="16dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:alpha="0"/>

        <TextView
            android:id="@+id/txt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="16dp"
            android:text="@string/password"
            android:textColor="@color/white"
            android:textSize="23sp"
            android:alpha="0"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ed_register_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="50dp"
            android:hint="@string/password_description"
            app:boxBackgroundMode="outline"
            android:outlineProvider="background"
            app:boxBackgroundColor="@color/coba"
            app:boxStrokeColor="@color/white"
            app:boxStrokeWidth="0dp"
            app:passwordToggleEnabled="true"
            android:alpha="0"
            >
            <com.example.storyapp.MyEditTextPassword
                android:id="@+id/ed_register_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:outlineAmbientShadowColor="@color/white"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:paddingStart="16dp"
                android:backgroundTint="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <ImageView
        android:id="@+id/lock"
        android:layout_width="139dp"
        android:layout_height="135dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="@+id/linearLayout"
        app:srcCompat="@mipmap/lock2"
        />
    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <Button
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background"
        android:layout_marginTop="20dp"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:text="@string/signup"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        android:alpha="0"/>

    <LinearLayout
        android:id="@+id/txt_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup"
        android:alpha="0">

        <TextView
            android:id="@+id/is_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/is_login"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup"/>

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textStyle="bold"
            android:textColor="@color/purple"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>